--- a/resources/language/resource.language.en_gb/strings.po
+++ b/resources/language/resource.language.en_gb/strings.po
@@ -20,17 +20,13 @@ msgctxt "#30000"
 msgid "General"
 msgstr ""
 
-msgctxt "#30001"
-msgid "Content type"
-msgstr ""
+# unused #30001 
 
 msgctxt "#30002"
 msgid "Items per page"
 msgstr ""
 
-msgctxt "#30003"
-msgid "VK API version"
-msgstr ""
+# unused #30003 
 
 msgctxt "#30004"
 msgid "VK user access token"
@@ -41,9 +37,17 @@ msgid "VIDEOS"
 msgstr ""
 
 msgctxt "#30006"
-msgid "Play video"
+msgid "SEARCH VIDEOS"
 msgstr ""
 
 msgctxt "#30007"
+msgid "NEXT PAGE >>>"
+msgstr ""
+
+msgctxt "#30008"
 msgid "COMMUNITIES"
+msgstr ""
+
+msgctxt "#30009"
+msgid "NEW SEARCH"
 msgstr ""
