--- a/resources/language/resource.language.cs_cz/strings.po
+++ b/resources/language/resource.language.cs_cz/strings.po
@@ -84,7 +84,7 @@ msgctxt "#30024"
 msgid "Addon routing error!"
 msgstr "Chyba routingu!"
 
-# Addon menu (30030+)
+# Addon main menu (30030+)
 
 msgctxt "#30030"
 msgid "SEARCH"
@@ -103,8 +103,8 @@ msgid "LIKED VIDEOS"
 msgstr "OBLÍBENÁ VIDEA"
 
 msgctxt "#30034"
-msgid "ALBUMS"
-msgstr "ALBA"
+msgid "VIDEO ALBUMS"
+msgstr "VIDEO ALBA"
 
 msgctxt "#30035"
 msgid "COMMUNITIES"
@@ -117,3 +117,138 @@ msgstr "OBLÍBENÉ KOMUNITY"
 msgctxt "#30037"
 msgid "STATS"
 msgstr "STATISTIKY"
+
+# Context menu actions (30050+)
+
+msgctxt "#30050"
+msgid "Unlike video"
+msgstr "Už se mi nelíbí"
+
+msgctxt "#30051"
+msgid "Like video"
+msgstr "Líbí se mi"
+
+msgctxt "#30052"
+msgid "Set albums for video"
+msgstr "Zařadit do alb"
+
+msgctxt "#30053"
+msgid "Search similar"
+msgstr "Hledat podobné"
+
+msgctxt "#30054"
+msgid "Unlike community"
+msgstr "Už se mi nelíbí"
+
+msgctxt "#30055"
+msgid "Like community"
+msgstr "Líbí se mi"
+
+msgctxt "#30056"
+msgid "Unfollow community"
+msgstr "Přestat sledovat"
+
+msgctxt "#30057"
+msgid "Play album as playlist"
+msgstr "Přehrát vše v albu"
+
+msgctxt "#30058"
+msgid "Rename album"
+msgstr "Přejmenovat album"
+
+msgctxt "#30059"
+msgid "Move up"
+msgstr "Posunout nahoru"
+
+msgctxt "#30060"
+msgid "Move down"
+msgstr "Posunout dolů"
+
+msgctxt "#30061"
+msgid "Delete album"
+msgstr "Smazat album"
+
+msgctxt "#30062"
+msgid "Add album"
+msgstr "Přidat album"
+
+msgctxt "#30063"
+msgid "Edit search"
+msgstr "Upravit dotaz"
+
+msgctxt "#30064"
+msgid "Delete search"
+msgstr "Smazat dotaz"
+
+# Play (30080+)
+
+msgctxt "#30080"
+msgid "Resolving error!"
+msgstr "Chyba resolveru!"
+
+# Search (30090+)
+
+msgctxt "#30090"
+msgid "Enter the search query:"
+msgstr "Zadejte hledaný dotaz:"
+
+msgctxt "#30091"
+msgid "{0} videos found."
+msgstr "{0} videí nalezeno."
+
+# Albums (30110+)
+
+msgctxt "#30110"
+msgid "Enter the album title:"
+msgstr "Zadejte název alba:"
+
+msgctxt "#30111"
+msgid "Album added."
+msgstr "Album přidáno."
+
+msgctxt "#30112"
+msgid "Confirmation:"
+msgstr "Potvrzení:"
+
+msgctxt "#30113"
+msgid "Do you want to delete the album?"
+msgstr "Chcete smazat album?"
+
+msgctxt "#30114"
+msgid "Album deleted."
+msgstr "Album smazáno."
+
+msgctxt "#30115"
+msgid "Edit the album title:"
+msgstr "Upravte název alba:"
+
+msgctxt "#30116"
+msgid "Album renamed."
+msgstr "Album přejmenováno."
+
+msgctxt "#30117"
+msgid "Set the albums for video:"
+msgstr "Nastavte alba pro video:"
+
+msgctxt "#30118"
+msgid "Albums set."
+msgstr "Alba nastavena."
+
+# Likes (30130+)
+
+msgctxt "#30130"
+msgid "Like added to video. ({0} likes)"
+msgstr "Přidáno mezi oblíbená videa. ({0} uživatelů)"
+
+msgctxt "#30131"
+msgid "Like deleted from video."
+msgstr "Odebráno z oblíbených videí."
+
+# Stats (30150+)
+
+
+# Others (30200+)
+
+msgctxt "#30200"
+msgid "NEXT PAGE"
+msgstr "DALŠÍ STRANA"
