--- a/resources/language/resource.language.cs_cz/strings.po
+++ b/resources/language/resource.language.cs_cz/strings.po
@@ -16,8 +16,7 @@ msgstr ""
 "Language: cs_CZ\n"
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
 
-# Addon settings (30000+)
-
+# Addon settings
 msgctxt "#30000"
 msgid "GENERAL"
 msgstr "OBECNÉ"
@@ -86,8 +85,7 @@ msgctxt "#30019"
 msgid "VK user access token"
 msgstr "VK uživatelský token"
 
-# Addon init (30020+)
-
+# Addon authorization
 msgctxt "#30020"
 msgid "Enter your VK login/email"
 msgstr "Zadejte své VK uživ. jméno/email"
@@ -96,24 +94,7 @@ msgctxt "#30021"
 msgid "Enter your VK password"
 msgstr "Zadejte své VK heslo"
 
-msgctxt "#30022"
-msgid "VK authorization error!"
-msgstr "Chyba VK autorizace!"
-
-msgctxt "#30023"
-msgid "VK API error!"
-msgstr "Chyba VK API!"
-
-msgctxt "#30024"
-msgid "Addon routing error!"
-msgstr "Chyba routingu!"
-
-msgctxt "#30025"
-msgid "Missing data file error!"
-msgstr "Chyba datového souboru!"
-
-# Addon main menu (30030+)
-
+# Addon main menu
 msgctxt "#30030"
 msgid "SEARCH"
 msgstr "HLEDAT"
@@ -146,8 +127,7 @@ msgctxt "#30037"
 msgid "STATS"
 msgstr "STATISTIKY"
 
-# Context menu actions (30050+)
-
+# Context menu actions
 msgctxt "#30050"
 msgid "Unlike video"
 msgstr "Odebrat z oblíb. videí"
@@ -204,14 +184,7 @@ msgctxt "#30063"
 msgid "Delete search"
 msgstr "Smazat hledání"
 
-# Play (30080+)
-
-msgctxt "#30080"
-msgid "Resolving error!"
-msgstr "Chyba resolveru!"
-
-# Search (30090+)
-
+# Search
 msgctxt "#30090"
 msgid "Enter the search query:"
 msgstr "Zadejte hledaný dotaz:"
@@ -224,8 +197,7 @@ msgctxt "#30092"
 msgid "Search deleted."
 msgstr "Hledání smazáno."
 
-# Albums (30110+)
-
+# Video albums
 msgctxt "#30110"
 msgid "Enter the album title:"
 msgstr "Zadejte název alba:"
@@ -262,8 +234,7 @@ msgctxt "#30118"
 msgid "Albums set."
 msgstr "Alba nastavena."
 
-# Likes (30130+)
-
+# Likes
 msgctxt "#30130"
 msgid "Like added to video. ({0} likes)"
 msgstr "Video přidáno mezi oblíbené. ({0} uživatelů)"
@@ -280,16 +251,38 @@ msgctxt "#30133"
 msgid "Like deleted from community."
 msgstr "Komunita odebrána z oblíbených."
 
-# Communities (30140+)
-
+# Communities
 msgctxt "#30140"
 msgid "Community was left."
 msgstr "Komunita opuštěna."
 
-# Stats (30150+)
+# Stats
+msgctxt "#30150"
+msgid "Lorem ipsum"
+msgstr "Lorem ipsum"
 
-# Others (30200+)
-
-msgctxt "#30200"
+# Paginator
+msgctxt "#30190"
 msgid "NEXT PAGE"
 msgstr "DALŠÍ STRANA"
+
+# Errors
+msgctxt "#30200"
+msgid "VK authorization error!"
+msgstr "Chyba VK autorizace!"
+
+msgctxt "#30201"
+msgid "VK API error!"
+msgstr "Chyba VK API!"
+
+msgctxt "#30202"
+msgid "Routing error!"
+msgstr "Chyba routingu!"
+
+msgctxt "#30203"
+msgid "Missing data file error!"
+msgstr "Chyba datového souboru!"
+
+msgctxt "#30204"
+msgid "Resolving error!"
+msgstr "Chyba resolveru!"
